--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -1,4 +1,4 @@
-name: Sample
+name: App
 
 on:
   push:
@@ -14,7 +14,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.8'
+          python-version: '3.14'
           architecture: 'x64'
       - name: Install dependencies
         run: pip install -r requirements.txt
