--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,38 +1,42 @@
-name: Deploy Flight Board
+name: Update Flight Board
 
 on:
-  # 5分ごとにジョブを自動実行
+  # 毎日午前0時 (UTC) に実行 (JSTの午前9時)
   schedule:
-    - cron: '*/5 * * * *'
-  # 手動実行も可能にする
+    - cron: '0 0 * * *'
+  # 手動実行を可能にする
   workflow_dispatch:
 
 jobs:
-  generate_and_deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
-    
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
-      
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.x'
-          
+          python-version: '3.11' # Pythonのバージョンを指定
+
       - name: Install dependencies
-        run: pip install requests
-        
-      # 1. index.html を生成する
-      - name: Run data generator script
-        run: python generate_flights.py
+        run: |
+          python -m pip install --upgrade pip
+          # requestsモジュールをインストール
+          pip install requests
+
+      - name: Run flight data generation script
         env:
-          AEROAPI_KEY: ${{ secrets.AEROAPI_KEY }}
-          
-      # ★★★ ここにデプロイステップが続く ★★★
-      # 2. GitHub Pagesにデプロイ
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+          # Secretsで登録したAPIキーを変数としてスクリプトに渡す
+          AVIATION_STACK_KEY: ${{ secrets.AVIATION_STACK_KEY }}
+        run: |
+          # generate_flights.py を実行し、index.htmlを生成
+          python generate_flights.py
+
+      - name: Commit and Push changes
+        uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: . # index.html が生成されたリポジトリのルートを指定
+          # 生成された index.html のみをコミット対象とする
+          files: index.html
+          commit_message: "Auto-update: Flight board data refresh"
+          branch: main # または master ブランチ名に合わせてください
