--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,9 @@
 name: Update Flight Board
 
 on:
-  # 毎日午前0時 (UTC) に実行 (JSTの午前9時)
+  # 5分ごとに実行
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '*/5 * * * *' 
   # 手動実行を可能にする
   workflow_dispatch:
 
@@ -17,26 +17,22 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11' # Pythonのバージョンを指定
+          python-version: '3.11' 
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          # requestsモジュールをインストール
           pip install requests
 
       - name: Run flight data generation script
         env:
-          # Secretsで登録したAPIキーを変数としてスクリプトに渡す
           AVIATION_STACK_KEY: ${{ secrets.AVIATION_STACK_KEY }}
         run: |
-          # generate_flights.py を実行し、index.htmlを生成
           python generate_flights.py
 
       - name: Commit and Push changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          # 生成された index.html のみをコミット対象とする
           files: index.html
           commit_message: "Auto-update: Flight board data refresh"
           branch: main # または master ブランチ名に合わせてください
