--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,8 @@
 name: Update Flight Board
 
 on:
-  # 5分ごとに実行
   schedule:
-    - cron: '*/5 * * * *' 
-  # 手動実行を可能にする
+    - cron: '*/30 * * * *' # 30分ごとに実行
   workflow_dispatch:
 
 jobs:
